quiz styling / fix header overflow / nav buttons

--- a/usability-tool/styles/accountpopup.scss
+++ b/usability-tool/styles/accountpopup.scss
@@ -3,7 +3,7 @@
 .account-popup {
   width: 200px;
   position: absolute;
-  top: 100%;
+  top: 65px;
   right: 0;
   background: #324a5f;
   color: #ffffff;
