--- a/usability-tool/styles/menupopup.scss
+++ b/usability-tool/styles/menupopup.scss
@@ -1,7 +1,7 @@
 .menu-popup {
   width: 200px;
   position: absolute;
-  top: 100%;
+  top: 65px;
   left: 0;
   background: #324a5f;
   text-align: center;
